feat(auth): Finalização da autenticação.

--- a/Api.Application/appsettings.json
+++ b/Api.Application/appsettings.json
@@ -2,7 +2,8 @@
   "TokenConfigurations": {
     "Audience": "ExemploAudience",
     "Issuer": "ExemploIssuer",
-    "Seconds": 120
+    "Seconds": 1200,
+    "SecondsPersistConnected": 7776000
   },
   "Logging": {
     "LogLevel": {
