--- a/Api.Application/appsettings.json
+++ b/Api.Application/appsettings.json
@@ -12,5 +12,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "MySQLDevelopment": "Server=localhost;Port=3306;Database=dbapi;Uid=root;Pwd=root"
+  }
 }
