feat(docker): Implementação do docker.

--- a/source/Api.Application/appsettings.json
+++ b/source/Api.Application/appsettings.json
@@ -14,6 +14,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "MySQLDevelopment": "Server=localhost;Port=3306;Database=dbapi;Uid=root;Pwd=root"
+    "MySQLDevelopment": "Server=localhost;Port=3306;Database=dbapi;Uid=jonathandetoni;Pwd=Ton!960427"
   }
 }
