--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,18 @@
-version: "3"
-
+version: '2'
+ 
 services:
-    api-autenticacao:
-        build:
-            context: .
-            dockerfile: Dockerfile
-        environment:
-            - ConnectionStrings:Server=localhost;Port=3306;Database=dbapi;Uid=jonathandetoni;Pwd=Ton!960427;
-        image: architecture_web
-        container_name: api-autenticacao
-        ports:
-            - 5000:80
+  app:
+    build:
+      context:  ./
+      dockerfile: Dockerfile
+  https-portal:
+    image: steveltn/https-portal:1
+    ports:
+      - '80:80'
+      - '443:443'
+    links:
+      - app
+    restart: always
+    environment:
+      DOMAINS: 'alpacatracker.com -> http://app:5000'
+      STAGE: 'production'
