--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3'
 
 services:
-  apicontagem:
+  api-autenticacao:
     image: jonathandetoni/api-autenticacao
     build:
       context: .
+      dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "5000:80"
