fix(docker): Passando o --network=host.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   api-autenticacao:
     image: jonathandetoni/api-autenticacao
+    network_mode: host
     build:
       context: .
       dockerfile: Dockerfile
