--- a/source/Api.Application/appsettings.json
+++ b/source/Api.Application/appsettings.json
@@ -14,6 +14,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "MySQLDevelopment": "Server=localhost;Port=3306;Database=dbapi;Uid=jonathandetoni;Pwd=Ton!960427"
+    "MySQLDevelopment": "Server=db-mysql-nyc1-34845-do-user-6457165-0.a.db.ondigitalocean.com;Port=25060;Database=defaultdb;Uid=doadmin;Pwd=n4xubi1okqf88o8d;SslMode=REQUIRED"
   }
 }
