feat(docker): passando as variaveis de ambiente.

--- a/source/Api.Application/appsettings.json
+++ b/source/Api.Application/appsettings.json
@@ -12,8 +12,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionString": {
-    "MySQLDevelopment": "Server=db-mysql-nyc1-34845-do-user-6457165-0.a.db.ondigitalocean.com;Port=25060;Database=defaultdb;Uid=doadmin;Pwd=n4xubi1okqf88o8d;SslMode=REQUIRED"
-  }
+  "AllowedHosts": "*"
 }
