--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,16 @@
-version: '3'
+version: '3.4'
 
 services:
   api-autenticacao:
     image: api-autenticacao
     build:
       context: .
+    environment: 
+      MYSQL_SERVER: ${MYSQL_SERVER}
+      MYSQL_PORT: ${MYSQL_PORT}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PWD: ${MYSQL_PWD}
+      MYSQL_SSL_MODE: ${MYSQL_SSL_MODE}
     ports:
-      - "5000:80"
-    #network_mode: host
+      - "8080:80"
