refactor(database): Melhorando a forma de passar a connection string
Agora ao iniciar a aplicação, é identificado se é uma ambiente de desenvolvimento ou de produção na hora de construir a connection string.

--- a/Api.Application/appsettings.json
+++ b/Api.Application/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "MYSQL_DATABASE": "dbname",
+    "MYSQL_USER": "root",
+    "MYSQL_PWD": "root"
+  }
 }
