refactor(database): Utilizando os parametros no appsettings.Development.json

--- a/Api.Application/appsettings.json
+++ b/Api.Application/appsettings.json
@@ -12,10 +12,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionString": {
-    "MYSQL_DATABASE": "dbname",
-    "MYSQL_USER": "root",
-    "MYSQL_PWD": "root"
-  }
+  "AllowedHosts": "*"
 }
