--- a/Api.Application/appsettings.Development.json
+++ b/Api.Application/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionString": {
+    "MYSQL_DATABASE": "dbname",
+    "MYSQL_USER": "root",
+    "MYSQL_PWD": "root"
   }
 }
