refactor(settings): Implementando novos arquivos de configuração.

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,20 @@ project.lock.json
 *.pyc
 nupkg/
 
-# AppSettings
-*/appsettings.*.json
+# ignore appsettings
+**/appsettings.development.json
+**/appsettings.staging.json
+**/appsettings.production.json
+
+# ignore connectionstrings
+**/connectionstrings.development.json
+**/connectionstrings.staging.json
+**/connectionstrings.production.json
+
+# ignore mailsettings
+**/mailsettings.development.json
+**/mailsettings.staging.json
+**/mailsettings.production.json
 
 # Visual Studio Code
 .vscode
