refactor(core): Modificando entidades de entrada e saída dos dados.

--- a/Api.Application/appsettings.json
+++ b/Api.Application/appsettings.json
@@ -14,8 +14,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "MYSQL_DATABASE": "dbname",
-    "MYSQL_USER": "root",
-    "MYSQL_PWD": "root"
+    "MYSQL_DATABASE": "Jobis",
+    "MYSQL_USER": "jonathandetoni",
+    "MYSQL_PWD": "Ton!960427"
   }
 }
