fix(database): Passando a connection string para rodar as migrations.

--- a/Api.Application/appsettings.json
+++ b/Api.Application/appsettings.json
@@ -1,7 +1,7 @@
 {
   "TokenConfigurations": {
-    "Audience": "ExemploAudience",
-    "Issuer": "ExemploIssuer",
+    "Audience": "Jobis",
+    "Issuer": "Jobis",
     "Seconds": 1200,
     "SecondsPersistConnected": 7776000
   },
@@ -14,8 +14,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "MYSQL_DATABASE": "Jobis",
-    "MYSQL_USER": "jonathandetoni",
-    "MYSQL_PWD": "Ton!960427"
+    "MYSQL_DATABASE": "",
+    "MYSQL_USER": "",
+    "MYSQL_PWD": ""
   }
 }
